frontend/test/should_pass/pattern_014.grg
pattern Foo
{
	x: Node;
	
	replace bla
	{
	}
	modify blub
	{
	}
}