frontend/test/should_fail/pattern_001.grg
pattern Foo(x:Node)
{
	x;
	replace {}
}
